# django-babel-underscore

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tasks.py  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
src/django-babel-underscore/: __init__.py
src/django_babel_underscore/: __init__.py
tests/: __init__.py  test_extract.py
