[wheel]
universal = 1

[metadata]
license-file = LICENSE

[tools:pytest]
python_files=test*.py
addopts=-vs --tb=short
timeout=5
norecursedirs=.tox
pep8maxlinelength = 96
pep8ignore =
    tests/*.py ALL
    *.py E128
    docs/conf.py ALL

flakes-ignore =
    src/pytest_django_casperjs/tests/*.py ALL
    docs/conf.py ALL

[flake8]
ignore = E128
max-line-length = 96
exclude = .tox,.git,docs,docs/conf.py,src/pytest_django_casperjs/tests/*.py,*.egg*
